--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,14 @@
 server.compression.enabled=true
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3306/telenews?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.url= jdbc:mysql://localhost:3306/telenews?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url= jdbc:mysql://localhost:3306/telenews?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= root
 spring.datasource.password=
 
+#spring.jpa.properties.hibernate.connection.CharSet=UTF-8
+#spring.jpa.properties.hibernate.connection.characterEncoding=UTF-8
+#spring.jpa.properties.hibernate.connection.useUnicode=true
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
